Changes for 1.5.0:

- RPM generation with CPack

Changes for 1.4.0:

- Minor configuration issues (pom.xml and cmake)
- Changed C++ standard to C++17

Changes for 1.3.0:

- Add 'KeepAlive' function
- Allow definition of empty strings

Changes for 1.2.0:

- Refactor ObjectManager into multiple components
- Added ServiceStore class template to manage storage and retrieval of objects
- Added possibility to register integer and double literals from XML
- Refactor dependency traits
- Added static asserts for dependency types during registration
- Added unit tests
- Added example

Changes for 1.1.0:

- CMake file update

Changes for 1.0.0:

- Registration of object constructors and global functions
- Typesafe management of registered instances (using a type map)
- Support for XML-based dependency injection
- Support injection by unique_ptr (with ownership transfer) and by value, reference or pointer (no ownership transfer)